--- a/boletines/assets/css/main.css
+++ b/boletines/assets/css/main.css
@@ -1,19 +1,103 @@
-p
-{
-  color:red;
+/*CYAN AZUL #00BCD4;*/
+/*NEGRO #212121;*/
+/*AMARILLO #FFEB3B;*/
+/*BLANCO #FFFFFF*/
+/*GRIS #BDBDBD*/
+
+
+html{
+  font-family: 'Nunito',sans-serif;
 }
-.red
-{
-  height: 200px;
-  width: 100px;
-  background-color: red;
+a{
+  text-decoration: none;
+  color:#00BCD4;
 }
- #boton-pago
- {
-   background-color: yellow;
+
+a:hover{
+  opacity: 0.8;
+}
+
+a:focus{
+  background-color:red;
+}
+
+.title{
+  text-transform: uppercase;
+  text-align: center;
+}
+ .container{
+   background: #00BCD4;  /* fallback for old browsers */
+   background: -webkit-linear-gradient(to right, #00CDAC, #00BCD4);  /* Chrome 10-25, Safari 5.1-6 */
+   background: linear-gradient(to right, #00CDAC, #00BCD4); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+   height:100vh;
+   display:flex;
+   align-items: center;
+   justify-content: center;
  }
 
- td
- {
-   border:solid 1px !important;
+ .content{
+   max-width:960px;
+   max-height:500px;
+   width: 100%;
+   height: 100%;
+   background-color:white;
+   border-radius: 4px;
+   box-shadow:0 3px 6px rgba(0,0,0,0.16),0 3px 6px rgba(0,0,0,0.23);
+   position: relative;
+   padding:1.8em;
  }
+.actions{
+  position: absolute;
+  top:1em;
+  right:1em;
+}
+.close{
+  height: 40px;
+  width: 40px;
+  color: white;
+  border-radius: 50%;
+  background-color:#00BCD4;
+  display: inline-block;
+  box-shadow:0 3px 6px rgba(0,0,0,0.16),0 3px 6px rgba(0,0,0,0.23);
+  font-size: 300;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
+
+
+}
+
+
+ .paragraph {
+   line-height: 1.8em;
+   font-weight: 200;
+ }
+
+ .table{
+   width: 100%;
+   border-spacing: 0;
+ }
+.table td,.table th {
+  padding: 1em;
+  text-align: left;
+}
+.table tr:nth-child(even){
+  background-color:#CEF6F5;
+}
+.fa-star{
+  color: #FFBF00;
+}
+.title-item{
+  border-bottom:#00BCD4 solid 2px;
+  padding-bottom: 1em;
+  font-size: 2em;
+}
+.position{
+  background-color:#00CDAC;
+  color: white;
+  padding:10px;
+  border-radius: 4px;
+  margin-right:0.5em;
+}
