--- a/Cursos/angular/cursos-facilito/src/app/title/title.component.html
+++ b/Cursos/angular/cursos-facilito/src/app/title/title.component.html
@@ -1,3 +1,3 @@
 <h1>Curso Angular</h1>
-{{getEdadNombre()}}
-<ng-content></ng-content>
+<h3> {{name}}</h3>
+<button [disabled]="!isAvailable" [class.active]=!isAvailable type="button" name="button">Incribirse </button>
